# RustStart

./: Cargo.toml  LICENSE.md  README.md
scripts/: build.sh  run.sh  version.sh
src/: check_if_prime.rs  constants.rs  hello_world.rs  main.rs  prime_checker_v2.rs  print.rs  utils.rs  vars.rs
src/hello_world/: mod.rs
src/prime_checker_v2/: mod.rs
src/utils/: mod.rs
