[package]
name = "rust_start"
version = "0.2.0"
edition = "2021"
rust-version = "1.69.0"
authors = [
    "Arkiralor <prithoo11335@gmail.com>"
]
description = "A simple codebase to learn Rust."
readme = "README.md"
repository = "https://github.com/Arkiralor/RustStart/"
license-file = "LICENSE.md"
keywords = ["learning", "tutorial", "prime-numbers"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.0.0"
cargo-modules = "0.8.0" 
